backend/src/main/java/com/example/backend/cmm/error/exception/EncodingException.java
package com.example.backend.cmm.error.exception;

public class EncodingException extends RuntimeException {
    private static final long serialVersionUID = 4469568329799854145L;

    public EncodingException(String message) {
        super(message);
    }
}
